--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -13,14 +13,79 @@
             .left {
                 flex: 1;
                 padding: 20px;
+                position: relative;
+                border-radius: 10px;
 
                 -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
                 box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+
+                .editButton {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    padding: 5px;
+                    font-size: 12px;
+                    color: #135cc3;
+                    background-color: #146de938;
+                    border-radius: 0px 10px 0px 5px;
+                    cursor: pointer;
+                }
+
+                .item {
+                    display: flex;
+                    gap: 20px;
+
+                    .itemImg {
+                        height: 100px;
+                        width: 100px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+
+                    .details {
+
+                        .itemTitle {
+                            margin-bottom: 10px;
+                            color: #555;
+                        }
+
+                        .detailItem {
+                            margin-bottom: 0px;
+                            font-size: 14px;
+
+                            .itemKey {
+                                font-weight: bold;
+                                color: grey;
+                                margin-right: 5px;
+                            }
+
+                            .itemValue {
+                                font-weight: 300;
+                            }
+
+                        }
+                    }
+                }
             }
 
             .right {
                 flex: 2;
             }
+        }
+
+        .title {
+            font-size: 16px;
+            color: lightgray;
+            margin-bottom: 20px;
+        }
+
+        .bottom {
+            padding: 20px;
+            border-radius: 10px;
+            margin: 10px 20px;
+
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
         }
     }
 }
