--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,4 +1,26 @@
 .datatable{
+   
+    .datatableTitle{
+        width: 100%;
+        font-size: 24px;
+        color: gray;
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .link{
+            padding: 5px;
+            margin: 10px;
+            text-decoration: none;
+            background-color: #146ce9;
+            color: white;
+            font-size: 16px;
+            font-weight: 400;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    }
 
     .cellWithImg{
         display: flex;
